src/components/navbar/navbar.scss
@import "../../styles/global-variables";

.#{$css-namespace} .main-navbar {
    padding: 0;
    background-color: #ffffff !important;

    .container {
        padding: 0;
    }

    @media (min-width: 1200px) {
        .container {
            max-width: 1140px !important;
        }
    }
    .navbar-brand {
        width: 220px;
        height: 80px;
        background: url("../../styles/img/logo.png") no-repeat 0 50%;
        text-indent: -9999px;
    }
    .navbar-nav {
        .nav-link {
            margin-left: 1px;
            padding: 10px 15px;
            font-family: "Fjalla One", serif;
            font-size: 14px;
            text-transform: uppercase;
            color: $nav-color;

            &:hover, &.active {
                color: $primary;
            }
        }
    }
}

